--- a/main.html
+++ b/main.html
@@ -14,6 +14,9 @@
     <section>
       There will be a section where you you have a endless amount of classes to
       drap and drop in your outline.
+	  <script>
+	  
+	  </script>
     </section>
   </body>
 </html>
